--- a/netlify.toml
+++ b/netlify.toml
@@ -4,13 +4,50 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  CI = "false"
 
+# Handle client-side routing
 [[redirects]]
   from = "/*"
+  to = "/index.html"
+  status = 200
+
+# Specific route handling
+[[redirects]]
+  from = "/login"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/register"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/dashboard"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/network"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/admin"
   to = "/index.html"
   status = 200
 
 [dev]
   command = "npm start"
   port = 3000
-  publish = "build" 
+  publish = "build"
+
+# Headers for better performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin" 
