--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "IHE",
-  "name": "Integrated Health Ecosystem",
+  "short_name": "IHCE",
+  "name": "IHCE - Integrated Health Care Ecosystem",
   "icons": [
     {
       "src": "favicon.ico",
